--- a/estilospersonales.css
+++ b/estilospersonales.css
@@ -1,6 +1,6 @@
 @charset "utf 8";
 body {
-    background-image: url(../imgs/fondopersonal.jpeg);
+    background-image: url(imgs/fondopersonal.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 80px;
